2003-06-11	ujwal

    * Using embedded FreeMono font for graphical characters 
      since that font provides all the glyphs.
      
    * VT100Terminal does not set NSCharacterWidthAttributeName for ascii text.
      This is so that the custom typesetter can easily check 
      for double width characters by just looking for the existence of the 
      attribute.

2003-06-10	ujwal

    * Bug fixes and speed improvement to VT100Typesetter.

2003-06-09	fabian
    * Let VT100Typesetter layout every glyph. Glyph alignment
      problem solved. But, 
        1. speed is much slower (~2x), 
        2. change font with a large scrollback buffer takes for
           ever (due to re-layout, I think).
    * Added double width character support in VT100Typesetter.
           
2003-06-09	ujwal

    * Caching new line string in VT100Screen for big speed boost.

2003-06-08	ujwal

    * Updated localizations including strings dictionaries.
    
2003-06-05	ujwal

    * Custom typesetter to speed up display. Needs more testing. 
      To activate, turn on USE_CUSTOM_LAYOUT in iTerm.h

2003-06-01	ujwal

    * Updated Korean translation from TaeYoung Oh.
    
    * Hiding cursor during typing.

2003-05-31	ujwal
    
    * Added an "Add" button to the AddressBook.
    
    * Changed name of Address Book to Bookmarks.

2003-05-30	ujwal

    * Changed AddressBook window class back to NSPanel so that it 
      does not appear in the list of windows. Fixed some resizing and 
      button positioning issues.


2003-05-29	ujwal

    * Fixed bug where PseduoTerminal's delegate was not being set.
    
    * Fixed bug in PTYTextView in ARRY mode where the delagate was not 
      being retained. 
          
    * Fixed more memory leaks caused by PseudoTerminal and PTYSession 
      retaining each other. Now PTYSession does not retain PseudoTerminal 
      parent.
      
    * Added support for blinking cursor.

2003-05-28	ujwal

    * Removed duplicate preferences from main preference panel.